--- a/tiffs_to_xrDataset.ipynb
+++ b/tiffs_to_xrDataset.ipynb
@@ -193,17 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed D:/VUB/_data/modis_ET/tiff_files/LE_500m\\MOD16A2GF.A2000113.h21v08.061.2020257234519.tif\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var_dataset_list=[]\n",
     "for i in range(len(var_list)):\n",
@@ -216,7 +208,7 @@
     "    units='J/m^2/day'\n",
     "    # elif variable=='Ec':\n",
     "    #     units='mm'\n",
-    "    var_dataset=merge_Gtiffs_to_Dataset(files=var_list[i][10:],variable=var_name, units=units) #(files: list, variable: str, year, month, day, units: str):\n",
+    "    var_dataset=merge_Gtiffs_to_Dataset(files=var_list[i][0:500],variable=var_name, units=units) #(files: list, variable: str, year, month, day, units: str):\n",
     "    #append to list\n",
     "    var_dataset_list.append(var_dataset)\n",
     "\n",
@@ -226,33 +218,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "1103"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "var_dataset_list"
+    "len(files) #0:500, 500:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "with gdal.Open(files[0]) as ds:\n",
     "    geotransform = ds.GetGeoTransform()\n",
     "    proj = ds.GetProjection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(33.8, 0.004166666666666668, 0.0, 5.0, 0.0, -0.004166666666666667)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "geotransform"
    ]
   },
   {
