surface conductance notebook

--- a/gridded_ETo.ipynb
+++ b/gridded_ETo.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#py_data_analysis environment\n",
     "import xarray as xr\n",
     "import os\n",
     "import numpy as np\n",
@@ -138,15 +139,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ea_td['ea_td'].sel(lat=1.0,lon=36.4,method='nearest').plot(figsize=(15,3.5), c='g')\n",
     "ea['ea'].sel(lat=1.0,lon=36.4,method='nearest').plot(alpha=1, c='k')\n",
     "#ea_tmin.sel(lat=1.0,lon=36.4,method='nearest').plot(alpha=0.5, c='r')"
@@ -200,25 +192,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Rn['Rn'][81].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plot temperature\n",
-    "Tmax['air_temperature'][0].plot()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -233,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file=r\"D:\\VUB\\_data\\DEM\\psychrometric_constant.tif\""
+    "DEM_file=r\"D:\\VUB\\_data\\DEM\\psychrometric_constant.tif\""
    ]
   },
   {
@@ -243,7 +216,7 @@
    "outputs": [],
    "source": [
     "#read the first file to get the dimensions\n",
-    "ds = gdal.Open(file)\n",
+    "ds = gdal.Open(DEM_file)\n",
     "band = ds.GetRasterBand(1)\n",
     "\n",
     "#open as array\n",
@@ -260,14 +233,14 @@
     "arr = xr.DataArray(arr,coords=[lat,lon],dims=['lat','lon'])\n",
     "\n",
     "#assign nodata value\n",
-    "arr = arr.where(arr!=band.GetNoDataValue())\n",
+    "psychrometric = arr.where(arr!=band.GetNoDataValue())\n",
     "\n",
     "#to reduce file size, convert to float32\n",
-    "arr=arr.astype('float32')\n",
-    "arr.name='psychrometric_constant'\n",
+    "psychrometric=psychrometric.astype('float32')\n",
+    "psychrometric.name='psychrometric_constant'\n",
     "\n",
     "#set projection\n",
-    "arr.attrs['crs'] = 'EPSG:4326'"
+    "psychrometric.attrs['crs'] = 'EPSG:4326'"
    ]
   },
   {
@@ -311,7 +284,7 @@
    "source": [
     "#export Rn and psychrometric constant\n",
     "Rn.to_netcdf(r\"D:\\VUB\\_data\\mswx_ETo_inputs\\Rn_ROI_10km.nc\")\n",
-    "arr.to_netcdf(r\"D:\\VUB\\_data\\mswx_ETo_inputs\\psychrometric_constant_500m.nc\")\n",
+    "psychrometric.to_netcdf(r\"D:\\VUB\\_data\\mswx_ETo_inputs\\psychrometric_constant_500m.nc\")\n",
     "wind_const_d.to_netcdf(r\"D:\\VUB\\_data\\mswx_ETo_inputs\\wind_const_d_10km.nc\")\n",
     "wind_const_n.to_netcdf(r\"D:\\VUB\\_data\\mswx_ETo_inputs\\wind_const_n_10km.nc\")\n",
     "delta.to_netcdf(r\"D:\\VUB\\_data\\mswx_ETo_inputs\\delta_10km.nc\")"
