finished surface conductance analysis

--- a/tiffs_to_xrDataset.ipynb
+++ b/tiffs_to_xrDataset.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,9 +193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\kart\\anaconda3\\envs\\py_data_analysis\\lib\\site-packages\\osgeo\\gdal.py:312: FutureWarning: Neither gdal.UseExceptions() nor gdal.DontUseExceptions() has been explicitly called. In GDAL 4.0, exceptions will be enabled by default.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -218,7 +226,7 @@
     "    units='J/m^2/day'\n",
     "    # elif variable=='Ec':\n",
     "    #     units='mm'\n",
-    "    var_dataset=merge_Gtiffs_to_Dataset(files=var_list[i][601:],variable=var_name, units=units) #(files: list, variable: str, year, month, day, units: str):\n",
+    "    var_dataset=merge_Gtiffs_to_Dataset(files=var_list[i][:],variable=var_name, units=units) #(files: list, variable: str, year, month, day, units: str):\n",
     "    #append to list\n",
     "    var_dataset_list.append(var_dataset)\n",
     "\n",
@@ -233,26 +241,6 @@
    "outputs": [],
    "source": [
     "len(files) #0:500, 500: #change var_dataset2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.939865344"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "var_dataset.nbytes/1e9"
    ]
   },
   {
@@ -281,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_netcdf(r\"D:/VUB/_data/nc_files/modis_LE_2000_2023.nc\")"
+    "var_dataset2.to_netcdf(r\"D:/VUB/_data/nc_files/modis_LE_2000_2023.nc\")"
    ]
   },
   {
