expand study area to East African Savanna

--- a/bulk_download_GEE_imagecollection.ipynb
+++ b/bulk_download_GEE_imagecollection.ipynb
@@ -4,7 +4,32 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p>To authorize access needed by Earth Engine, open the following\n",
+       "        URL in a web browser and follow the instructions:</p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/cloud-platform%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=_Anq72bve5X9yDN6bgWWyTXgBt2HS6iHxSgmtPZBbng&tc=xp9AHrbFH0sKqRbV1QA1FhuxoGgil6f7ceP1VeKKreM&cc=P2o6e1xKN6mmwNQ9IPAqRG1fBSV9yN4BKJbuTHZEW4o>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/cloud-platform%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=_Anq72bve5X9yDN6bgWWyTXgBt2HS6iHxSgmtPZBbng&tc=xp9AHrbFH0sKqRbV1QA1FhuxoGgil6f7ceP1VeKKreM&cc=P2o6e1xKN6mmwNQ9IPAqRG1fBSV9yN4BKJbuTHZEW4o</a></p>\n",
+       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Successfully saved authorization token.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +101,7 @@
     "bandNames=ee.Image(image_ids[0]).bandNames().getInfo()\n",
     "\n",
     "# Boundary of region of interest\n",
-    "roi = ee.Geometry.Rectangle([27, -30, 28, -27]) #xmin, ymin, xmax, ymax\n",
+    "roi = ee.Geometry.Rectangle([30, -10, 45, 10]) #xmin, ymin, xmax, ymax\n",
     "point_roi=ee.Geometry.Point(1, 36.5)\n",
     "\n",
     "# Function to mask all values outside the geometry\n",
@@ -414,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -455,14 +480,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting MODIS_2023_12_27_LE...\r"
+      "Exporting MODIS_2017_01_01_LC_Type1...\r"
      ]
     }
    ],
    "source": [
     "# Download each image with both layers: sm_surface and sm_rootzone\n",
     "\"\"\"name of folder in Google Drive\"\"\"\n",
-    "download_folder = \"MODIS_LH_Flux\" \n",
+    "download_folder = \"MODIS_EA_LC_\" \n",
     "bands = subset_bands\n",
     "\n",
     "for image_id in image_ids:\n",
@@ -491,7 +516,10 @@
     "            fileFormat=\"GeoTIFF\"\n",
     "        )\n",
     "        task.start()\n",
-    "        print(f\"Exporting {filename}...\", end=\"\\r\")"
+    "        print(f\"Exporting {filename}...\", end=\"\\r\")\n",
+    "\n",
+    "        if task.status()[\"state\"] == \"COMPLETED\":\n",
+    "            print(f\"Exported {filename}... Done\", end=\"\\r\")"
    ]
   },
   {
