'minor bug fixes'

--- a/bulk_download_GEE_imagecollection.ipynb
+++ b/bulk_download_GEE_imagecollection.ipynb
@@ -724,8 +724,8 @@
     "\n",
     "# Define the EPSG:4326 projection with appropriate scale\n",
     "target_projection = 'EPSG:4326'\n",
-    "target_scale = #463.3127165279165 to latlon\n",
-    "target_scale = \n",
+    "target_scale = 463.3127165279165\n",
+    "\n",
     "\n",
     "for image_id in image_ids:\n",
     "    image = ee.Image(image_id).select(bands).clip(roi)\n",
