--- a/download_LP_DAAC_data.ipynb
+++ b/download_LP_DAAC_data.ipynb
@@ -23,7 +23,7 @@
     "import glob\n",
     "import time\n",
     "# import numpy as np\n",
-    "# import pandas as pd\n",
+    "import pandas as pd\n",
     "#import rasterio as rio\n",
     "from osgeo import gdal\n",
     "import requests\n",
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Credentials fo LP DAAC\n",
     "# you will require an EarthData login\n",
-    "host = fr'https://e4ftl01.cr.usgs.gov/MOLT/MOD16A2GF.061/'\n",
+    "host = fr'https://e4ftl01.cr.usgs.gov/MOLT/MOD17A2HGF.061/'\n",
     "login = os.getenv('user')\n",
     "password = os.getenv('pwd')\n",
     "\n",
-    "out_dir =r\"E:\\_data\\vegetation_dynamics_EA\\HDF_FILES\\MODIS_ET\"\n",
+    "out_dir =r\"E:\\_data\\vegetation_dynamics_EA\\HDF_FILES\\MODIS_GPP\"\n",
     "\n",
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)"
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,8 @@
      "output_type": "stream",
      "text": [
       "1104 folders found\n",
-      "Downloading MOD16A2GF.A2009017.h22v08.061.2021163010341.hdf\r"
+      "Downloading MOD16A2GF.A2023361.h22v09.061.2024038085653.hdf\n",
+      "Download process completed with 0 exceptions\n"
      ]
     }
    ],
@@ -239,8 +240,8 @@
     "print(f\"{len(folders)} folders found\")\n",
     "\n",
     "# Compile regex for Kenyan tiles\n",
-    "hreg = re.compile(\"h2[2]\")  # Kenya is in h21 and h22\n",
-    "vreg = re.compile(\"v0[8]\")  # Kenya is in v08 and v09\n",
+    "hreg = re.compile(\"h2[1]\")  # Kenya is in h21 and h22\n",
+    "vreg = re.compile(\"v0[9]\")  # Kenya is in v08 and v09\n",
     "\n",
     "# Initialize a list to keep track of any exceptions\n",
     "exceptions = list()\n",
