--- a/download_LP_DAAC_data.ipynb
+++ b/download_LP_DAAC_data.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
      "output_type": "stream",
      "text": [
       "1104 folders found\n",
-      "Downloading MOD16A2GF.A2023361.h22v09.061.2024038085653.hdf\n",
+      "Downloading MOD17A2HGF.A2023361.h22v09.061.2024021050114.hdf\n",
       "Download process completed with 0 exceptions\n"
      ]
     }
@@ -240,7 +240,7 @@
     "print(f\"{len(folders)} folders found\")\n",
     "\n",
     "# Compile regex for Kenyan tiles\n",
-    "hreg = re.compile(\"h2[1]\")  # Kenya is in h21 and h22\n",
+    "hreg = re.compile(\"h2[2]\")  # Kenya is in h21 and h22\n",
     "vreg = re.compile(\"v0[9]\")  # Kenya is in v08 and v09\n",
     "\n",
     "# Initialize a list to keep track of any exceptions\n",
@@ -283,6 +283,15 @@
     "        time.sleep(5)\n",
     "\n",
     "print(\"\\n\" f\"Download process completed with {len(exceptions)} exceptions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exceptions"
    ]
   },
   {
