--- a/tiffs_to_xrDataset.ipynb
+++ b/tiffs_to_xrDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,20 +48,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ET_500m', 'LE_500m', 'PET_500m', 'PLE_500m', 'ET_QC_500m']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "subdataset_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HDF4_EOS:EOS_GRID:\"D:\\\\VUB\\\\_data\\\\modis_ET\\\\hdf_files\\\\MOD16A2GF.A2000001.h21v08.061.2020256104621.hdf\":MOD_Grid_MOD16A2:ET_500m'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "subdatasets[1][0]"
+    "subdatasets[0][0]"
    ]
   },
   {
@@ -73,21 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing E:/_data/vegetation_dynamics_EA/HDF_FILES\\extra_files/vvv/MOD17A2HGF.A2006337.h21v09.061.2021058172026.tif\r"
+     ]
+    }
+   ],
    "source": [
-    "input_files = glob.glob(r\"D:/VUB/_data/modis_ET/hdf_files/*.hdf\")\n",
+    "input_files = glob.glob(r\"E:\\_data\\vegetation_dynamics_EA\\HDF_FILES\\extra_files/*.hdf\")\n",
     "input_files.sort()\n",
     "\n",
     "out_folder_name = subdatasets[1][0].split(':')[-1]\n",
-    "out_folder = f\"D:/VUB/_data/modis_ET/tiff_files/{out_folder_name}\"\n",
+    "out_folder = f\"E:/_data/vegetation_dynamics_EA/HDF_FILES\\extra_files/vvv\"\n",
     "if not os.path.exists(out_folder):\n",
     "    os.makedirs(out_folder, exist_ok=True)\n",
     "\n",
-    "for fl in input_files[2011:]:      \n",
+    "for fl in input_files[0:10]:      \n",
     "    #check files with 21v08 in the name\n",
-    "    if '21v08' in fl:\n",
+    "    if '21v09' in fl:\n",
     "\n",
     "        out_file = f\"{out_folder}/{os.path.basename(fl).replace('.hdf','.tif')}\"\n",
     "\n",
@@ -98,10 +128,41 @@
     "        subdataset =  gdal.Open(dataset.GetSubDatasets()[1][0], gdal.GA_ReadOnly)\n",
     "        \n",
     "        # gdalwarp\n",
-    "        kwargs = {'format': 'GTiff', 'dstSRS': 'EPSG:4326', 'outputBounds': [33.8, 0.00, 39.5, 5.0],'creationOptions': ['COMPRESS=LZW']}\n",
+    "        kwargs = {'format': 'GTiff', 'dstSRS': 'EPSG:4326', 'creationOptions': ['COMPRESS=LZW']}\n",
     "        print(f\"Processing {out_file}\", end='\\r')\n",
     "        ds = gdal.Warp(destNameOrDestDS=out_file,srcDSOrSrcDSTab=subdataset, **kwargs)\n",
-    "        del ds"
+    "        #del ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_files = glob.glob(r\"E:\\_data\\vegetation_dynamics_EA\\HDF_FILES\\extra_files/*.hdf\")\n",
+    "input_files.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['E:\\\\_data\\\\vegetation_dynamics_EA\\\\HDF_FILES\\\\extra_files\\\\MOD17A2HGF.A2002049.h21v09.061.2020137142942.hdf',\n",
+       " 'E:\\\\_data\\\\vegetation_dynamics_EA\\\\HDF_FILES\\\\extra_files\\\\MOD17A2HGF.A2006337.h21v09.061.2021058172026.hdf']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_files"
    ]
   },
   {
