--- a/convert_hdf_to_tiff_and_arrays.ipynb
+++ b/convert_hdf_to_tiff_and_arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,6 +402,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(output_dir):\n",
+    "    os.makedirs(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [],
@@ -446,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +508,7 @@
     "\n",
     "        #assign variable properties\n",
     "        arr.attrs['units'] = 'kg*C/m^2'\n",
-    "        arr.attrs['long_name'] = 'MODIS Net Photosynthesis'\n",
+    "        arr.attrs['long_name'] = 'MODIS GPP'\n",
     "        arr.attrs['source'] = 'MODIS'\n",
     "        arr.attrs['scale'] = 0.0001\n",
     "        arr.attrs['Description'] = \"The MOD17A2HGF Version 6 Gross Primary Productivity (GPP) product is a cumulative 8-day composite of values with 500 meter (m) pixel size. \\n The data product includes information about GPP and Net Photosynthesis (PSN). The PSN band values are the GPP less the Maintenance Respiration (MR). The data product also contains a PSN Quality Control (QC) layer.\"\n",
@@ -510,7 +520,7 @@
     "    #concatenate the list of arrays into a single xarray dataset\n",
     "    print(f\"\\n Saving the dataset to {output_file}\")\n",
     "    npp_xr=xr.concat(array_list,dim='time')\n",
-    "    npp_xr.name = 'PsNet'\n",
+    "    npp_xr.name = 'GPP'\n",
     "\n",
     "    #save the dataset to a netcdf file\n",
     "    npp_xr.to_netcdf(output_file)\n",
@@ -524,9 +534,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiffs_to_convert = glob.glob(r\"D:\\VUB\\_data\\modis_8day_gpp_2000_2023\\tiffs\\subset_psnet\\*.tif\")\n",
-    "output_dir=r\"D:\\VUB\\_data\\nc_files\"\n",
-    "output_file=os.path.join(output_dir,'MODIS_8day_PsNet_2000_2023.nc')\n",
+    "tiffs_to_convert = glob.glob(r\"E:\\_data\\vegetation_dynamics_EA\\TIF_FILES\\MODIS_GPP\\merged_tiffs\\*.tif\")\n",
+    "output_dir=r\"E:\\_data\\vegetation_dynamics_EA\\TIF_FILES\\MODIS_GPP\\merged_tiffs\"\n",
+    "output_file=os.path.join(output_dir,'MODIS_8day_GPP_2000_2023.nc')\n",
     "\n",
     "merge_Gtiffs_to_NetCDF(tiffs_to_convert,output_file)"
    ]
@@ -662,7 +672,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "multipurpose",
+   "display_name": "py_data_analysis",
    "language": "python",
    "name": "python3"
   },
