--- a/tiffs_to_xrDataset.ipynb
+++ b/tiffs_to_xrDataset.ipynb
@@ -505,11 +505,31 @@
     "# var_dataset['TWS_tavg'].sel(lat=slice(1.1,0.9),lon=slice(36.4,36.6)).mean(dim=['lat','lon']).plot(ax=ax2, label='10-40cm', color='red')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.022457779374775423"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2.5/111.32"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "multipurpose",
+   "display_name": "py_data_analysis",
    "language": "python",
    "name": "python3"
   },
