--- a/download_LP_DAAC_data.ipynb
+++ b/download_LP_DAAC_data.ipynb
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Credentials fo LP DAAC\n",
     "# you will require an EarthData login\n",
-    "host = fr'https://e4ftl01.cr.usgs.gov/MOLT/MOD17A2HGF.061/'\n",
+    "host = fr'https://e4ftl01.cr.usgs.gov/MOLT/MOD15A2H.061/'\n",
     "login = os.getenv('user')\n",
     "password = os.getenv('pwd')\n",
     "\n",
-    "out_dir =r\"E:\\_data\\vegetation_dynamics_EA\\HDF_FILES\\MODIS_GPP\"\n",
+    "out_dir =r\"F:/MODISLAI/extra_files\"\n",
     "\n",
     "if not os.path.exists(out_dir):\n",
     "    os.makedirs(out_dir)"
@@ -76,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1128 folders found\n"
+     ]
+    }
+   ],
    "source": [
     "# list folders from which to download\n",
     "r = requests.get(host, verify=True, stream=True,auth=(login,password))\n",
@@ -217,15 +225,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1104 folders found\n",
-      "Downloading MOD17A2HGF.A2023361.h22v09.061.2024021050114.hdf\n",
+      "1128 folders found\n",
+      "Processed 1090 folders, pausing for 5 seconds...053456.hdf\n",
       "Download process completed with 0 exceptions\n"
      ]
     }
@@ -240,14 +248,14 @@
     "print(f\"{len(folders)} folders found\")\n",
     "\n",
     "# Compile regex for Kenyan tiles\n",
-    "hreg = re.compile(\"h2[2]\")  # Kenya is in h21 and h22\n",
-    "vreg = re.compile(\"v0[9]\")  # Kenya is in v08 and v09\n",
+    "hreg = re.compile(\"h2[1-2]\")  # Kenya is in h21 and h22\n",
+    "vreg = re.compile(\"v0[8-9]\")  # Kenya is in v08 and v09\n",
     "\n",
     "# Initialize a list to keep track of any exceptions\n",
     "exceptions = list()\n",
     "\n",
     "# Loop through folders and process files\n",
-    "for folder in folders[:]:\n",
+    "for folder in folders[1070:1090]:\n",
     "    folder_url = f\"{host}/{folder}\"\n",
     "    r = requests.get(folder_url, verify=True, stream=True, auth=(login, password))\n",
     "    soup = BeautifulSoup(r.text, \"html.parser\")\n",
@@ -345,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "multipurpose",
+   "display_name": "py_data_analysis",
    "language": "python",
    "name": "python3"
   },
