expanded ROI Gleam data

--- a/bulk_download_GEE_imagecollection.ipynb
+++ b/bulk_download_GEE_imagecollection.ipynb
@@ -39,8 +39,7 @@
     "        ee.Initialize()\n",
     "except Exception as e:\n",
     "        ee.Authenticate()\n",
-    "        ee.Initialize()\n",
-    "        "
+    "        ee.Initialize()"
    ]
   },
   {
@@ -879,7 +878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "multipurpose",
+   "display_name": "py_geospatial",
    "language": "python",
    "name": "python3"
   },
