--- a/ecosystem_C_assimilation.ipynb
+++ b/ecosystem_C_assimilation.ipynb
@@ -1694,7 +1694,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "x_array_gridder",
+   "display_name": "xesmf_env",
    "language": "python",
    "name": "python3"
   },
