--- a/download_ESA_CCI_sm.ipynb
+++ b/download_ESA_CCI_sm.ipynb
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "multipurpose",
+   "display_name": "py_data_analysis",
    "language": "python",
    "name": "python3"
   },
