--- a/gleam_data.ipynb
+++ b/gleam_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +55,13 @@
     "    for file in files:\n",
     "        ds=xr.open_dataset(file, engine='netcdf4')\n",
     "        #subset to study area  \n",
-    "        ds_subset=ds.sel(lat=slice(9, -6), lon=slice(30, 45))\n",
+    "        ds_subset=ds.sel(lat=slice(10, -6), lon=slice(30, 45))\n",
     "        subset_.append(ds_subset)\n",
     "\n",
     "    ds=xr.merge(subset_)\n",
     "\n",
-    "    ds.to_netcdf(f\"{outf}/gleam_{var}_2000_2023.nc\")"
+    "    print(f\"Saving {var}...\", end=\"\\r\")\n",
+    "    ds.to_netcdf(f\"{outf}/gleam_{var}_EAS_2000_2023.nc\")"
    ]
   },
   {
@@ -136,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "multipurpose",
+   "display_name": "py_data_analysis",
    "language": "python",
    "name": "python3"
   },
