--- a/process_multisource_datasets.ipynb
+++ b/process_multisource_datasets.ipynb
@@ -965,7 +965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "multipurpose",
+   "display_name": "py_data_analysis",
    "language": "python",
    "name": "python3"
   },
